--- a/index.html
+++ b/index.html
@@ -4,10 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- axios cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
+    <!-- /axios cdn -->
+    <!-- vue js cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- /vue js cdn -->
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- /css -->
     <title>Vue Dischi Musicali</title>
   </head>
   <body>
+    <!-- header -->
+    <header>
+      <div class="logo">
+        <img src="img/logo.png" alt="logo spotify">
+      </div>
+    </header>
+    <!-- /header -->
+
+    <!-- main -->
+    <main>
+      <div class="box">
+        <div class="album">
+          <img src="img/album1.jpg" alt="album litfiba">
+        </div>
+        <h1>title</h1>
+        <h2>band</h2>
+        <p>anno uscita</p>
+      </div>
+      <div class="box">
+        <div class="album">
+          <img src="img/album1.jpg" alt="album litfiba">
+        </div>
+        <h1>title</h1>
+        <h2>band</h2>
+        <p>anno uscita</p>
+      </div>
+      <div class="box">
+        <div class="album">
+          <img src="img/album1.jpg" alt="album litfiba">
+        </div>
+        <h1>title</h1>
+        <h2>band</h2>
+        <p>anno uscita</p>
+      </div>
+      <div class="box">
+        <div class="album">
+          <img src="img/album1.jpg" alt="album litfiba">
+        </div>
+        <h1>title</h1>
+        <h2>band</h2>
+        <p>anno uscita</p>
+      </div>
+      <div class="box">
+        <div class="album">
+          <img src="img/album1.jpg" alt="album litfiba">
+        </div>
+        <h1>title</h1>
+        <h2>band</h2>
+        <p>anno uscita</p>
+      </div>
+      <div class="box">
+        <div class="album">
+          <img src="img/album1.jpg" alt="album litfiba">
+        </div>
+        <h1>title</h1>
+        <h2>band</h2>
+        <p>anno uscita</p>
+      </div>
+
+    </main>
+    <!-- /main -->
+
+    <!-- js -->
     <script src="js/script.js" charset="utf-8"></script>
+    <!-- /js -->
   </body>
 </html>
