--- a/index.html
+++ b/index.html
@@ -25,55 +25,18 @@
     <!-- /header -->
 
     <!-- main -->
-    <main>
-      <div class="box">
+    <main id="root">
+      <!-- main box -->
+      <div class="box" v-for="album in albums">
         <div class="album">
           <img src="img/album1.jpg" alt="album litfiba">
         </div>
         <h1>title</h1>
-        <h2>band</h2>
-        <p>anno uscita</p>
+        <h2>author</h2>
+        <p>genre</p>
+        <p>year</p>
       </div>
-      <div class="box">
-        <div class="album">
-          <img src="img/album1.jpg" alt="album litfiba">
-        </div>
-        <h1>title</h1>
-        <h2>band</h2>
-        <p>anno uscita</p>
-      </div>
-      <div class="box">
-        <div class="album">
-          <img src="img/album1.jpg" alt="album litfiba">
-        </div>
-        <h1>title</h1>
-        <h2>band</h2>
-        <p>anno uscita</p>
-      </div>
-      <div class="box">
-        <div class="album">
-          <img src="img/album1.jpg" alt="album litfiba">
-        </div>
-        <h1>title</h1>
-        <h2>band</h2>
-        <p>anno uscita</p>
-      </div>
-      <div class="box">
-        <div class="album">
-          <img src="img/album1.jpg" alt="album litfiba">
-        </div>
-        <h1>title</h1>
-        <h2>band</h2>
-        <p>anno uscita</p>
-      </div>
-      <div class="box">
-        <div class="album">
-          <img src="img/album1.jpg" alt="album litfiba">
-        </div>
-        <h1>title</h1>
-        <h2>band</h2>
-        <p>anno uscita</p>
-      </div>
+      <!-- /main box -->
 
     </main>
     <!-- /main -->
