--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <!-- /fontawesome -->
     <!-- axios cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
     <!-- /axios cdn -->
@@ -19,7 +22,7 @@
     <!-- header -->
     <header>
       <div class="logo">
-        <img src="img/logo.png" alt="logo spotify">
+        <i class="fab fa-spotify"></i>
       </div>
     </header>
     <!-- /header -->
@@ -29,12 +32,12 @@
       <!-- main box -->
       <div class="box" v-for="album in albums">
         <div class="album">
-          <img src="img/album1.jpg" alt="album litfiba">
+          <img :src="album.poster" :alt="album.title">
         </div>
-        <h1>title</h1>
-        <h2>author</h2>
-        <p>genre</p>
-        <p>year</p>
+        <h1>{{album.title}}</h1>
+        <h2>{{album.author}}</h2>
+        <p>{{album.genre}}</p>
+        <p>{{album.year}}</p>
       </div>
       <!-- /main box -->
 
