add. select ordered type

--- a/index.html
+++ b/index.html
@@ -39,12 +39,17 @@
           <option v-for="genre in genreOption" :value="genre">{{genre}}</option>
         </select>
         <!-- section options -->
+        <select name="" id="ordered-option" v-model="ordered">
+          <option value="">Anno</option>
+          <option value="1">Title</option>
+          <option value="2">Genre</option>
+        </select>
         <!-- /select -->
       </section>
       <!-- main -->
       <main>
         <!-- main box -->
-        <div class="box" v-for="album in albums" v-if="(album.genre == selected) || (selected == '')">
+        <div class="box" v-for="album in albumOrdinati" v-if="(album.genre == selected) || (selected == '')">
           <div class="album">
             <img :src="album.poster" :alt="album.title">
           </div>
